Create sub-main component

--- a/BookItSrc/src/app/main/main.component.html
+++ b/BookItSrc/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<p>
-  main works!
-  <app-settings></app-settings>
-</p>
+<div style="text-align:center">
+  <app-navbar></app-navbar>
+  <app-sub-main></app-sub-main>
+</div>
