--- a/BookItSrc/src/app/app.component.html
+++ b/BookItSrc/src/app/app.component.html
@@ -1,33 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-<app-navbar></app-navbar>
-<div style="text-align:center">
-  
-  <div *ngIf="auth.user | async; then authenticated else guest">
-    <!-- template will replace this div (depending on authentication state -->
-  </div>
-</div>
-
-
-
-<!-- User not logged in -->
-<ng-template #guest>
-  <button (click)="auth.googleLogin()">
-    <i class="fa fa-google"></i> Login With Google
-  </button>
-  <button (click)="auth.facebookLogin()">
-    <i class="fab fa-facebook-f"></i> Login With Facebook
-  </button>
-</ng-template>
-
-<!-- User logged in -->
-<ng-template #authenticated>
-  <div *ngIf="auth.user | async as user">
-    <h3>Hi {{ user.displayName }}</h3>
-    <img [src]="user.photoURL" />
-    <button (click)="auth.logout()">
-      Logout
-    </button>
-  </div>
-  <app-book></app-book>
-</ng-template>
+<router-outlet></router-outlet>
