--- a/BookItSrc/src/app/navbar/navbar/navbar.component.html
+++ b/BookItSrc/src/app/navbar/navbar/navbar.component.html
@@ -1,31 +1,29 @@
-<mat-toolbar class="mat-toolbar" color="primary" >
-  <mat-toolbar-row  class="mat-toolbar-row" color="primary" >
-    <button  mat-icon-button (click)="settingEnabled=true">
-      <div *ngIf="settingEnabled; then settingEnableIcon; else settingDisableIcon"></div>
+<mat-toolbar class="mat-toolbar" color="primary">
+  <mat-toolbar-row class="mat-toolbar-row" color="primary">
+    <button mat-icon-button (click)="setSetting()">
+      <div *ngIf="(_optionEnabled$ | async) === 'settings'; then settingsEnableIcon; else settingsDisableIcon"></div>
     </button>
-    
-    <button mat-icon-button (click)="explorerEnabled=true">
-      <div *ngIf="explorerEnabled; then explorerEnableIcon; else explorerDisableIcon"></div>
+
+    <button mat-icon-button (click)="setExplorer()">
+      <div *ngIf="(_optionEnabled$ | async) ==='explorer'; then explorerEnableIcon; else explorerDisableIcon"></div>
     </button>
-   
-    <button mat-icon-button (click)="myBooksEnabled=true">
-      <div *ngIf="myBooksEnabled; then myBooksEnableIcon; else myBooksDisableIcon"></div>
+
+    <button mat-icon-button (click)="setMyBooks()">
+      <div *ngIf="(_optionEnabled$ | async) ==='my books'; then myBooksEnableIcon; else myBooksDisableIcon"></div>
     </button>
   </mat-toolbar-row>
-  <mat-toolbar-row  class="mat-toolbar-row2">
-     
-      <app-auto-complete id="auto-complete"></app-auto-complete>
-      <span class="spacer"></span>
-      <span class="spacer"></span>
-  </mat-toolbar-row>
+
+  <div *ngIf="(_optionEnabled$ | async) ==='explorer'; then autoComplete;"></div>
+
 </mat-toolbar>
 
 
-<ng-template #settingEnableIcon>
+
+<ng-template #settingsEnableIcon>
   <mat-icon aria-label='person enable' svgIcon='person-blue' class=gray-icon></mat-icon>
 </ng-template>
 
-<ng-template #settingDisableIcon>
+<ng-template #settingsDisableIcon>
   <mat-icon svgIcon='person-gray' class=blue-icon></mat-icon>
 </ng-template>
 
@@ -43,4 +41,13 @@
 
 <ng-template #explorerDisableIcon>
   <mat-icon svgIcon='book-open-gray' class=blue-icon></mat-icon>
+</ng-template>
+
+<ng-template #autoComplete>
+  <mat-toolbar-row class="mat-toolbar-row2">
+
+    <app-auto-complete id="auto-complete"></app-auto-complete>
+    <span class="spacer"></span>
+    <span class="spacer"></span>
+  </mat-toolbar-row>
 </ng-template>
