--- a/BookItSrc/src/app/main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/settings/settings.component.html
@@ -9,9 +9,18 @@
 
         <div id="fav_cat">
           <label id="label_pick_cat">Pick your favorite book categories</label><br>
-          <label for="fav_cat">Option 1</label><input type="radio" class="form-control" id="fav_cat">
-          <label for="fav_cat">Option 2</label><input type="radio" class="form-control" id="fav_cat">
-          <label for="fav_cat">Option 3</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Love</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Hate</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Food</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 4</label><input type="radio" class="form-control" id="fav_cat"><br>
+          <label for="fav_cat">Option 5</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 6</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 7</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 8</label><input type="radio" class="form-control" id="fav_cat"><br>
+          <label for="fav_cat">Option 9</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 10</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 11</label><input type="radio" class="form-control" id="fav_cat">
+          <label for="fav_cat">Option 12</label><input type="radio" class="form-control" id="fav_cat">
         </div><br>
 
         <div class="form-group">
