--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -1,20 +1,38 @@
-/* Global */
-.container{
-    width:98%;
-    margin:auto;
-    overflow:hidden;
-    border: #cccccc solid 2px;
-}
 
-.container h1{
+
+h1{
     margin-top: 25px;
     font-size: 55px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .container button{
     margin-bottom: 25px;
 }
+
+  .form-h2 {
+    margin: 10px;
+  }
+  
+  .form-section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+  }
+
+  .mat-slider-horizontal {
+    width: 300px;
+  }
+  
+  .form-margin {
+    margin: 0 10px;
+  }
+
+  mat-chip {
+    max-width: 135px;
+  }
 
 
 
