--- a/BookItSrc/src/app/main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/settings/settings.component.scss
@@ -16,6 +16,25 @@
     margin-bottom: 25px;
 }
 
+mat-chip {
+    max-width: 200px;
+  }
+
+  .example-h2 {
+    margin: 10px;
+  }
+  
+  .example-section {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 60px;
+  }
+  
+  .example-margin {
+    margin: 0 10px;
+  }
+
 
 
 
