--- a/BookItSrc/src/app/app.component.html
+++ b/BookItSrc/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <app-navbar></app-navbar>
+<app-settings></app-settings>
 <div style="text-align:center">
   
   <div *ngIf="auth.user | async; then authenticated else guest">
