--- a/BookItSrc/src/app/login/login.component.html
+++ b/BookItSrc/src/app/login/login.component.html
@@ -1,8 +1,31 @@
-<div>
-  <button (click)="auth.facebookLogin()">
-    <i class="fab fa-facebook-f"></i> Login With Facebook
-  </button>
-  <button (click)="auth.googleLogin()">
-    <i class="fab fa-google"></i> Login With Google
-  </button>
+<div style="text-align: center;" class="container">
+  <div class="row align-items-center" style="margin-top: 10px;">
+    <div class="col">
+      <img src="assets/images/logo.png" />
+    </div>
+  </div>
+
+  <div class="row align-items-center" style="margin-top: 10px;">
+    <div class="col">
+      <img src="assets/images/login-seperator.png" />
+    </div>
+  </div>
+
+  <div class="row align-items-center" style="margin-top: 10px;">
+    <div class="col">
+      <div class="btn-group">
+        <button class="btn btn-primary disabled" (click)="auth.facebookLogin()"><i class="fab fa-facebook-f" style="width: 16px; height: 20px;"></i></button>
+        <button class="btn btn-primary" style="width: 12em;" (click)="auth.facebookLogin()">Login With Facebook</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="row align-items-center" style="margin-top: 10px;">
+    <div class="col">
+      <div class="btn-group">
+        <button class="btn btn-danger disabled" (click)="auth.googleLogin()"><i class="fab fa-google" style="width: 16px; height: 20px;"></i></button>
+        <button class="btn btn-danger" style="width: 12em;" (click)="auth.googleLogin()">Login With Google</button>
+      </div>
+    </div>
+  </div>
 </div>
