--- a/BookItSrc/src/styles.scss
+++ b/BookItSrc/src/styles.scss
@@ -2,3 +2,7 @@
 @import './custom-theme.scss';
 //@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+html, body {
+    background-color: #fafafa;
+}
