--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -1,39 +1,123 @@
 
 
+.container{
+  background: #fafafa;
+  padding-top: 30px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.RightLeftStyle, .search_radius, .buttons{
+  background: #fafafa;
+  padding: 0px;
+}
+
 h1{
-    margin-top: 25px;
-    font-size: 55px;
-    margin-bottom: 10px;
-    text-align: center;
+  margin-top: 5px;
+  font-size: 35px;
+  text-align: center;
+}
+
+hr{
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+  border-color: #6495ED;
+}
+
+.spacer{
+  flex:10;
 }
 
 .container button{
-    margin-bottom: 25px;
+    margin-bottom: 3px;
 }
 
   .form-h2 {
     margin: 10px;
   }
   
-  .form-section {
+  /*.form-section {
     display: flex;
-    align-content: center;
-    align-items: center;
     height: 60px;
-  }
-
-  .mat-slider-horizontal {
-    width: 300px;
-  }
+    background: #fafafa;
+  }*/
   
-  .form-margin {
-    margin: 0 10px;
-  }
 
   mat-chip {
     max-width: 135px;
   }
 
+  /* search radius */
 
+.container_search_radius{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 14px;
+  padding-bottom: 0px;
+}
 
+.form-margin-sr1 {
+  flex:auto;
+  padding-left: 12px;
+  text-align: left;
+  font-weight: 600;
+}
 
+.form-margin-sr2 {
+  flex:auto;
+  padding-right: 12px;
+  text-align: right;
+}
+
+.mat-slider-horizontal {
+  width: 90%;
+  padding-top: 0px;
+}
+
+ /* location + ctaegories + show_my_books*/
+
+ .RightLeftStyle{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 14px;
+  
+}
+
+.form-margin-c1 {
+  flex:auto;
+  padding-left: 12px;
+  width: 140px;
+  text-align: left;
+  font-weight: 600;
+}
+
+.form-margin-c2 {
+  flex:auto;
+  padding-right: 22px;
+  width: 80px;
+  text-align: right;
+  font-weight: 600;
+}
+
+.button-switch-page{
+  flex:auto;
+  text-align: center;
+  font-weight: 600;
+}
+
+.slide-show-books{
+  flex:auto;
+}
+
+#button_logout{
+  font-weight: 600;
+  align-content: center;
+  align-items: center;
+}
