--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -1,15 +1,24 @@
-<p>
-  categories categories categories categories categories categories
-</p>
-<p>
-    categories categories categories categories categories categories
-  </p>
-  <p>
-      categories categories categories categories categories categories
-    </p>
-    <p>
-        categories categories categories categories categories categories
-      </p>
-      <p>
-          categories categories categories categories categories categories
-        </p>
+<container-element [ngSwitch]="this.which_page">
+  <div class="container" *ngSwitchCase="'categories'">
+    <mat-card class="location-categories">
+      <section class="form-section">
+        <label class="form-margin" name="category_lab" ngDefaultControl>Pick wanted categories:</label>
+      </section>
+      <mat-chip-list [aria-orientation]="horizontal">
+        <mat-chip *ngFor="let chip of availableColors" selected="true" name="category_list" [color]="chip.color" ngDefaultControl>
+          {{chip.name}}
+        </mat-chip>
+      </mat-chip-list><br>
+
+      <button mat-button label class="button-switch-page" (click)="goToSettings()"> Back</button>
+    </mat-card>
+
+  </div>
+
+  <app-settings *ngSwitchCase="'settings'"></app-settings>
+
+
+  <app-locations *ngSwitchCase="'locations'"> </app-locations>
+
+
+</container-element>
