--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -25,7 +25,7 @@
             <label class="form-margin-sr2" name="search_radius_lab_2" [style.color]="'#8a8a8a'"> {{ value }}Km.</label>
           </div>
           <mat-slider name="search_radius_slider" class="form-margin" [max]="max" [min]="min" [step]="step" [thumb-label]="thumbLabel"
-            [(ngModel)]="value" ngDefaultControl>
+            [(ngModel)]="value">
           </mat-slider>
         </mat-card-content>
       </mat-card>
@@ -42,22 +42,13 @@
         </mat-card-content>
       </mat-card>
 
-      <!--<mat-card class="location-categories">
-    <section class="form-section">
-      <label class="form-margin" name="category_lab" ngDefaultControl>Pick wanted categories:</label>
-    </section>
-    <mat-chip-list [aria-orientation]="horizontal">
-      <mat-chip *ngFor="let chip of availableColors" selected="true" name="category_list" [color]="chip.color" ngDefaultControl>
-        {{chip.name}}
-      </mat-chip>
-    </mat-chip-list>
-    </mat-card>-->
+      
 
       <mat-card class="RightLeftStyle">
         <mat-card-content>
           <section class="form-section">
             <div class="container_location">
-              <label class="form-margin-c1" name="location_lab_1"> Show My Books</label>
+              <label class="form-margin-c1" name="location_lab_1"> Share My Books</label>
               <span class="spacer"></span>
               <mat-slide-toggle class="slide-show-books" [color]="slide_color" [checked]="slide_checked">
               </mat-slide-toggle>
