--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
@@ -5,6 +5,19 @@
   padding-left: 0px;
 }
 
+
+.header{
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 80px;
+  align-items: left;
+}
+
+.header-cat{
+  padding-top: 25px;
+}
+
 mat-chip {
   max-width: 135px;
 }
