--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -18,6 +18,15 @@ h1{
   text-align: center;
 }
 
+img{
+  border-radius: 50%;
+  border-style: inset;
+  border-width: 2px;
+  border-color: #a6a6a6;
+  height: 20%;
+  width: 50%;
+}
+
 hr{
   display: block;
   margin-top: 0.5em;
@@ -31,7 +40,8 @@ hr{
 
 .spacer{
   flex:1;
-  width: 150px;
+  min-width: 200px;
+  color: #fafafa;
 }
 
 .container button{
@@ -57,6 +67,7 @@ hr{
   align-items: flex-start;
   padding: 14px;
   padding-bottom: 0px;
+  flex-direction: row;
 }
 
 .form-margin-sr1 {
@@ -64,11 +75,12 @@ hr{
   padding-left: 12px;
   text-align: left;
   font-weight: 600;
+  min-width: 120px;
 }
 
 .form-margin-sr2 {
   flex:auto;
-  padding-right: 12px;
+  padding-right: 14px;
   text-align: right;
 }
 
@@ -80,15 +92,15 @@ hr{
  /* location + ctaegories + show_my_books*/
 
  .RightLeftStyle{
+  padding: 14px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  padding: 14px;
+  align-items: center;
   
 }
 
 .form-margin-c1 {
-  flex:auto;
+  align-items: flex-start;
   padding-left: 12px;
   width: 140px;
   text-align: left;
@@ -96,7 +108,7 @@ hr{
 }
 
 .form-margin-c2 {
-  flex:auto;
+  align-items: flex-end;
   padding-right: 22px;
   width: 80px;
   text-align: right;
@@ -104,9 +116,10 @@ hr{
 }
 
 .button-switch-page{
-  flex:auto;
+  align-self: flex-end;
   text-align: right;
   font-weight: 600;
+  min-width: 50px;
 }
 
 .slide-show-books{
