--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -75,5 +75,7 @@
 
   <app-locations *ngSwitchCase="'locations'">  </app-locations>
 
+  <app-locations *ngSwitchCase="'add_locations'">  </app-locations>
+
   
 </container-element>
