--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.html
@@ -8,18 +8,28 @@
 
     <mat-card class="location-categories">
       <mat-chip-list [aria-orientation]="horizontal">
-        <mat-chip *ngFor="let chip of availableColors" selected="true" name="category_list" [color]="chip.color" ngDefaultControl>
+        <mat-chip 
+          *ngFor="let chip of bookCategories"
+          (click)="chipedClicked(chip.name)"
+          selected="true"
+          [color]="chip.color"
+          class="mat-chip">
           {{chip.name}}
         </mat-chip>
       </mat-chip-list>
     </mat-card>
+    
+
+    <mat-card class="im-feeling-lucky-categories">
+        <button mat-button label class="button-add-cat" (click)="pickForUser()"> I'm Feeling Lucky </button>
+      </mat-card>
 
   </div>
 
   <app-settings *ngSwitchCase="'settings'"></app-settings>
 
-
   <app-locations *ngSwitchCase="'locations'"> </app-locations>
 
 
 </container-element>
+
