--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -3,14 +3,13 @@
     <div class="container" *ngIf="auth.user | async as user">
       <img [src]="user.photoURL" />
       <h3> {{ user.displayName }}</h3>
-      <br>
 
       <mat-card class="RightLeftStyle">
         <mat-card-content>
           <section class="form-section">
             <div class="container_location">
               <label class="form-margin-c1" name="location_lab_1"> Location</label>
-              <span class="spacer">~~~~~~~~@@--~~~~~~~~</span>
+              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
               <button mat-button label class="button-switch-page" (click)="goToLocations()" [style.color]="'#8a8a8a'"> ></button>
             </div>
           </section>
@@ -35,7 +34,7 @@
           <section class="form-section">
             <div class="container_categories">
               <label class="form-margin-c1" name="categories_lab_1"> Categories</label>
-              <span class="spacer">~~~~~~~~@@--~~~~~~~~</span>
+              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
               <button mat-button label class="button-switch-page" (click)="goToCategories()" [style.color]="'#8a8a8a'"> ></button>
             </div>
           </section>
@@ -49,7 +48,7 @@
           <section class="form-section">
             <div class="container_location">
               <label class="form-margin-c1" name="location_lab_1"> Share My Books</label>
-              <span class="spacer">~~~~~~~~@@--~~~~~~~~</span>
+              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
               <mat-slide-toggle class="slide-show-books" [color]="slide_color" [checked]="slide_checked">
               </mat-slide-toggle>
             </div>
@@ -72,10 +71,9 @@
 
   <app-categories *ngSwitchCase="'categories'"></app-categories>
 
-
   <app-locations *ngSwitchCase="'locations'">  </app-locations>
 
-  <app-locations *ngSwitchCase="'add_locations'">  </app-locations>
+  <app-add-location *ngSwitchCase="'add_locations'"> </app-add-location>
 
   
 </container-element>
