--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.scss
@@ -2,7 +2,7 @@
 
 .container{
   background: #fafafa;
-  padding-top: 30px;
+  padding-top: 15px;
   padding-right: 0px;
   padding-left: 0px;
 }
@@ -22,7 +22,7 @@ img{
   border-radius: 50%;
   border-style: inset;
   border-width: 2px;
-  border-color: #a6a6a6;
+  border-color: #6495ED;
   height: 20%;
   width: 50%;
 }
