--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.scss
@@ -12,15 +12,32 @@
     align-items: left;
 }
 
-.header-loc{
-    padding-top: 25px;
-}
 
 .button-switch-page{
   align-content: center;
   padding-left: 20px;
   align-self: left;
 }
+
+
+left-arrow-icon{
+    align-items: flex-start;
+    width: 65px;
+    height: 65px;
+  }
+    
+  label.header-loc {
+    flex-grow: 2;
+    position: relative;
+    right: 44px;
+    margin: 0;
+    }
+    
+    section.header {
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    }
 
 .button-add-loc{
     width: 100%;
