--- a/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/categories/categories.component.scss
@@ -5,19 +5,6 @@
   padding-left: 0px;
 }
 
-
-.header{
-  background-color: black;
-  color: white;
-  width: 100%;
-  height: 80px;
-  align-items: left;
-}
-
-.header-cat{
-  padding-top: 25px;
-}
-
 location-categories{
   width: 85%;
 }
@@ -27,18 +14,65 @@ mat-chip{
   margin: 0 0 0 8px;
 }
 
-
-button-switch-page {
-  flex: auto;
-  text-align: center;
-  font-weight: 600;
+pick-buttons{
+  width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.button-add-cat{
-  width: 100%;
+.button-add{
   background-color: #64B5F6;
   color: white;
   height: 50px;
+  border: 1px;
+  border-color: black;
+  align-content: center;
+  font-size: 14px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
+
+pick-buttons{
+  flex: auto;
+}
+
+.header{
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 80px;
+  flex: auto;
+  display: flex;
+}
+
+button-switch-page {
+  flex: start;
+  float:left;
+}
+
+label.header-cat {
+ flex-grow: 2;
+ position: relative;
+ right: 44px;
+ margin: 0;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+}
+
+/deep/ .mat-chip-list-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.mat-chip {
+  margin: 2px 4px;
+  }
+
 
   
