--- a/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/locations/locations.component.html
@@ -2,8 +2,10 @@
     <div class="container" *ngSwitchCase="'locations'">
       
         <section class="header">
-          <button mat-button label class="button-switch-page" (click)="goToSettings()"> < </button>
-          <label class="header-loc" name="category_lab" ngDefaultControl>Locations</label>
+          <button mat-button label class="button-switch-page" (click)="goToSettings()"> 
+              <div *ngIf="1 === 1; then leftArrowIcon"></div>
+             </button>
+          <label class="header-loc" ngDefaultControl>Locations</label>
         </section>
         
         <mat-card class="locations">
@@ -55,3 +57,7 @@
   <ng-template #rightDisableIcon>
     <mat-icon svgIcon='done' class=blue-icon></mat-icon>
   </ng-template>
+
+  <ng-template #leftArrowIcon>
+      <mat-icon  svgIcon='left-arrow' class="left-arrow-icon"></mat-icon>
+    </ng-template>
