--- a/BookItSrc/src/app/main/sub-main/settings/settings.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/settings.component.html
@@ -9,8 +9,10 @@
           <section class="form-section">
             <div class="container_location">
               <label class="form-margin-c1" name="location_lab_1"> Location</label>
-              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
-              <button mat-button label class="button-switch-page" (click)="goToLocations()" [style.color]="'#8a8a8a'"> ></button>
+              <span class="spacer"></span>
+              <button mat-button label class="button-switch-page" (click)="goToLocations()"> 
+                  <div *ngIf="1 === 1; then rightArrowIcon"></div>                  
+              </button>
             </div>
           </section>
         </mat-card-content>
@@ -34,8 +36,10 @@
           <section class="form-section">
             <div class="container_categories">
               <label class="form-margin-c1" name="categories_lab_1"> Categories</label>
-              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
-              <button mat-button label class="button-switch-page" (click)="goToCategories()" [style.color]="'#8a8a8a'"> ></button>
+              <span class="spacer"></span>
+              <button mat-button label class="button-switch-page" (click)="goToCategories()"> 
+                  <div *ngIf="1 === 1; then rightArrowIcon"></div>  
+              </button>
             </div>
           </section>
         </mat-card-content>
@@ -48,7 +52,7 @@
           <section class="form-section">
             <div class="container_location">
               <label class="form-margin-c1" name="location_lab_1"> Share My Books</label>
-              <span class="spacer">~~~~~~~~--~~~~~~~~</span>
+              <span class="spacer"></span>
               <mat-slide-toggle class="slide-show-books" [color]="slide_color" [checked]="slide_checked">
               </mat-slide-toggle>
             </div>
@@ -77,3 +81,8 @@
 
   
 </container-element>
+
+
+<ng-template #rightArrowIcon>
+    <mat-icon  svgIcon='right-arrow' class="right-arrow-icon"></mat-icon>
+  </ng-template>
